[tool.poetry]
name = "grafana-dashboard-exporter"
version = "0.1.0"
description = "Simple tool to export your grafana dashboards"
authors = ["Pavel Svejda <westwardharbor0@gmail.com>"]
packages = [
    { include = "src/"},
    { include = "dashboard_exporter.py" },
]


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.poetry.scripts]
exporter = "dashboard_exporter:main"
